clusters/talos-ottawa/apps/media/app/maintainerr/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: maintainerr
  annotations:
    item.homer.rajsingh.info/name: "Maintainerr"
    item.homer.rajsingh.info/subtitle: "Media Library Cleanup"
    item.homer.rajsingh.info/logo: "https://raw.githubusercontent.com/Maintainerr/Maintainerr/main/ui/public/logo_black.svg"
    item.homer.rajsingh.info/keywords: "media, cleanup, maintenance"
    service.homer.rajsingh.info/name: "Media"
    service.homer.rajsingh.info/icon: "fas fa-tv"
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: private
      namespace: home
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: ts
      namespace: home
  hostnames:
    - maintainerr.${CLUSTER_DOMAIN}
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: maintainerr
          port: 6246
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
